[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://game.PNG" type="Texture" id=2]

[node name="MainMenu" type="Control"]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 160.0 ],
"_edit_vertical_guides_": [ 530.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource( 2 )
stretch_mode = 4

[node name="BtnStart" type="Button" parent="."]
margin_left = 440.0
margin_top = 180.0
margin_right = 530.0
margin_bottom = 205.0
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start Game"

[node name="Label" type="Label" parent="."]
margin_left = 30.0
margin_top = 500.0
margin_right = 70.0
margin_bottom = 514.0

[node name="Button" type="Button" parent="."]
margin_left = 440.0
margin_top = 250.0
margin_right = 620.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Exit Game"

[node name="Button2" type="Button" parent="."]
margin_left = 440.0
margin_top = 330.0
margin_right = 620.0
margin_bottom = 370.0
text = "Toggle fullscreen"
[connection signal="pressed" from="BtnStart" to="." method="_on_BtnStart_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
